[profile.release]
panic = 'unwind'

[workspace]
members = [
    'node',
    'runtime',
    'precompiles/validator-controller',
    'pallets/root-controller',
    'pallets/validator-set',
    'pallets/validator-keys-controller',
    'primitives/runner',
    'precompiles/token-fee-controller/fee-token-selector',
    'precompiles/token-fee-controller/validator-fee-selector',
    'precompiles/token-fee-controller/supported-tokens-manager',
    'precompiles/fee-rewards-vault-controller',
    'precompiles/upgrade-runtime-controller',
    'primitives/tools',
    'primitives/fee-compatible-api',
    'primitives/zero-gas-transactions-api',
    'primitives/stability-rpc-api',
    'pallets/erc20-manager',
    'pallets/dnt-fee-controller',
    'pallets/token-fee-controller/supported-tokens-manager',
    'pallets/token-fee-controller/user-fee-selector',
    'pallets/token-fee-controller/validator-fee-selector',
    'pallets/fee-rewards-vault',
    'pallets/upgrade-runtime-proposal',
    'pallets/custom-balances',
    'pallets/sponsored-transactions',
    'primitives/tools',
    'pallets/root-controller',
    'stability-rpc',
    'client/authorship',
    'primitives/core',
    'primitives/account',
    'primitives/transaction-validator',
]

[workspace.package]
authors = ["Stability Solutions"]
edition = "2021"
repository = "https://github.com/stabilityprotocol/stability/"


[workspace.dependencies]
clap = { version = "4.3", features = ["derive", "deprecated"] }
affix = "0.1.2"
quote = "1.0.37"
proc-macro2 = "1.0.56"
tracing = "0.1.29"
tracing-core = "0.1.28"
tracing-subscriber = "0.2.19"
derive_more = "0.99"
impl-trait-for-tuples = "0.2.1"
num_enum = { default-features = false }
paste = "1.0.6"
similar-asserts = "1.1.0"
bn = { package = "substrate-bn", version = "0.6", default-features = false }
environmental = { version = "1.1.4", default-features = false }
jsonrpsee = { version = "0.23.2", features = ["server"] }
kvdb-rocksdb = "0.19.0"
libsecp256k1 = { version = "0.7", default-features = false }
hex = { version = "0.4.3", default-features = false }
parity-db = "0.4.13"
rlp = { version = "0.5.2", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
    "derive",
] }
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.11.6", default-features = false, features = [
    "derive",
] }
serde = { version = "1.0.197", default-features = false }
serde_json = { version = "1.0.114" }
futures = "0.3.30"
futures-timer = "3.0.1"
log = "0.4.17"
parking_lot = { version = "0.12.3", default-features = false }
array-bytes = "6.1"
bytes = "1.0"
async-trait = "0.1.57"
cfg-if = "1.0"
memory-db = { default-features = false }
trie-db = { default-features = false }
once_cell = "1.17.1"
hex-literal = "0.4.1"
syn = "1.0.98"
sqlx = { version = "0.7.4", default-features = false, features = ["macros"] }
thiserror = "1.0"
tokio = "1.40.0"
# Polkadot
staging-xcm = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
# Substrate Client
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-client-db = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-network-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
# Substrate Primitive
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-consensus-beefy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-database = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
beefy-primitives = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", package = "sp-beefy", branch = "stable2407" }
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-consensus-babe = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-externalities = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
# Substrate FRAME
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-metadata-hash-extension = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-babe = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-beefy-mmr = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
# Substrate Utility
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
# Frontier Client
fc-cli = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407", default-features = false }
fc-consensus = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407" }
fc-db = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407", default-features = false }
fc-mapping-sync = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407" }
fc-rpc = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407" }
fc-rpc-core = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407" }
fc-storage = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407" }
fc-api = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407" }
# Frontier Primitive
fp-account = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407", default-features = false }
fp-consensus = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407", default-features = false }
fp-ethereum = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407", default-features = false }
fp-evm = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407", default-features = false }
fp-rpc = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407", default-features = false }
fp-self-contained = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407", default-features = false }
fp-storage = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407", default-features = false }
fp-dynamic-fee = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407", default-features = false }
# Frontier FRAME
pallet-base-fee = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407", default-features = false }
pallet-ethereum = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407", default-features = false }
pallet-evm = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407", default-features = false }
pallet-evm-chain-id = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407", default-features = false }
pallet-evm-test-vector-support = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407", default-features = false }
pallet-hotfix-sufficients = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407", default-features = false }
precompile-utils = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407", default-features = false }
# Stability Client
stbl-cli-authorship = { path = './client/authorship' }
stbl-proposer-metrics = { path = './client/proposer-metrics' }
# Stability
pallet-evm-precompile-blake2 = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407", default-features = false }
pallet-evm-precompile-bn128 = { git = "https://github.com/stabilityprotocol/frontier", branch = "stable2407", default-features = false }
precompile-fee-token-selector = { path = "./precompiles/token-fee-controller/fee-token-selector", default-features = false }
precompile-validator-fee-selector = { path = "./precompiles/token-fee-controller/validator-fee-selector", default-features = false }
precompile-validator-controller = { path = "./precompiles/validator-controller", default-features = false }
pallet-root-controller = { path = "./pallets/root-controller", default-features = false }
pallet-dnt-fee-controller = { path = "./pallets/dnt-fee-controller", default-features = false }
pallet-sponsored-transactions = { path = "./pallets/sponsored-transactions", default-features = false }
pallet-zero-gas-transactions = { path = "./pallets/zero-gas-transactions", default-features = false }
stbl-primitives-zero-gas-transactions-api = { path = "./primitives/zero-gas-transactions-api", default-features = false }
stbl-primitives-fee-compatible-api = { path = "./primitives/fee-compatible-api", default-features = false }
pallet-erc20-manager = { path = "./pallets/erc20-manager", default-features = false }
pallet-upgrade-runtime-proposal = { path = "./pallets/upgrade-runtime-proposal", default-features = false }
stbl-tools = { path = "./primitives/tools", default-features = false }
precompile-map-svm-evm-controller = { path = "./precompiles/map-svm-evm-controller", default-features = false }
precompile-supported-tokens-manager = { path = "./precompiles/token-fee-controller/supported-tokens-manager", default-features = false }
pallet-fee-rewards-vault = { path = "./pallets/fee-rewards-vault", default-features = false }
precompile-fee-rewards-vault-controller = { path = "./precompiles/fee-rewards-vault-controller", default-features = false }
precompile-upgrade-runtime-controller = { path = "./precompiles/upgrade-runtime-controller", default-features = false }
# Stability Test
pallet-user-fee-selector = { path = "./pallets/token-fee-controller/user-fee-selector", default-features = false }
pallet-validator-fee-selector = { path = "./pallets/token-fee-controller/validator-fee-selector", default-features = false }
pallet-supported-tokens-manager = { path = "./pallets/token-fee-controller/supported-tokens-manager", default-features = false }
pallet-validator-set = { path = "./pallets/validator-set", default-features = false }
pallet-validator-keys-controller = { path = "./pallets/validator-keys-controller", default-features = false }
pallet-custom-balances = { path = './pallets/custom-balances', default-features = false }
runner = { path = "./primitives/runner", default-features = false }
# Test & Debugging
substrate-test-client = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
substrate-test-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
substrate-test-runtime-client = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-debug-derive = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false, features = [
    "force-debug",
] }


stbl-core-primitives = { path = "primitives/core", default-features = false }
account = { path = "primitives/account", default-features = false }
blake2-rfc = { version = "0.2.18", default-features = false }
impl-serde = { version = "0.4.0", default-features = false }
parity-scale-codec = { version = "3.2.2", default-features = false, features = [
    "derive",
] }
sha3 = { version = "0.9", default-features = false }
stability-rpc = { path = "./stability-rpc", default-features = false }
stability-rpc-api = { path = "./primitives/stability-rpc-api", default-features = false }
stbl-transaction-validator = { path = "./primitives/transaction-validator", default-features = false }
reqwest = { version = "0.11", features = ["json", "gzip"] }

# Arkworks
ark-bls12-377 = { default-features = false, features = ["curve"] }
ark-bw6-761 = { default-features = false }
ark-ec = { default-features = false }
ark-ff = { default-features = false }
ark-std = { default-features = false }

# EVM & Ethereum
evm = { version = "0.41.1", default-features = false }
evm-gasometer = { version = "0.41.0", default-features = false }
evm-runtime = { version = "0.41.0", default-features = false }
ethereum = { version = "0.15.0", default-features = false, features = [
    "with-codec",
] }
ethereum-types = { version = "0.14", default-features = false }

moonbeam-rpc-core-txpool = { path = "vendor/rpc-core/txpool", default-features = false }
moonbeam-primitives-ext = { path = "vendor/runtime/ext", default-features = false }
moonbeam-evm-tracer = { path = "vendor/runtime/evm-tracer", default-features = false }
moonbeam-rpc-primitives-debug = { path = "vendor/primitives/debug", default-features = false }
evm-tracing-events = { path = "vendor/primitives/evm-tracing-events", default-features = false }
moonbeam-rpc-primitives-txpool = { path = "vendor/primitives/txpool", default-features = false }
moonbeam-rpc-debug = { path = "vendor/rpc/debug", default-features = false }
moonbeam-rpc-trace = { path = "vendor/rpc/trace", default-features = false }
moonbeam-rpc-txpool = { path = "vendor/rpc/txpool", default-features = false }
moonbeam-client-evm-tracing = { path = "vendor/evm-tracing", default-features = false }
moonbeam-rpc-core-debug = { path = "vendor/rpc-core/debug", default-features = false }
moonbeam-rpc-core-trace = { path = "vendor/rpc-core/trace", default-features = false }
moonbeam-rpc-core-types = { path = "vendor/rpc-core/types", default-features = false }

substrate-prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
