[package]
name = "moonbeam-core-primitives"
authors = [ "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.1.1"

[dependencies]
account = { workspace = true, default-features = false }
parity-scale-codec = { workspace = true, default-features = false, features = ["derive"] }
fp-self-contained = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-application-crypto = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }

[features]
default = [ "std" ]
std = [
	"account/std",
	"fp-self-contained/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-application-crypto/std",
]
